# policyengine-uk-data

./: .gitignore  CHANGELOG.md  Makefile  README.md  changelog.yaml  changelog_entry.yaml  pyproject.toml
.github/: CONTRIBUTING.md  fetch_version.py
.github/workflows/: ci_cd.yaml  pull_request.yaml  push.yaml  update_versioning.yaml
docker/: policyengine_uk_data.Dockerfile
docs/: Home.py  _config.yml  _toc.yml  constituency_methodology.ipynb  methodology.ipynb  pension_contributions.ipynb  validation.ipynb
docs/Pages/: Methodology.py  Validation.py
docs/validation/: constituencies.ipynb  index.md  local_authorities.ipynb  national.ipynb
policyengine_uk_data/datasets/: __init__.py  spi.py
policyengine_uk_data/datasets/frs/: __init__.py  dwp_frs.py  enhanced_frs.py  extended_frs.py  frs.py
policyengine_uk_data/datasets/frs/local_areas/constituencies/: ageing.ipynb  calibrate.py  loss.py  transform_constituencies.py
policyengine_uk_data/datasets/frs/local_areas/constituencies/mapping_2010_to_2024/: construct_mapping_matrix.py  mapping_matrix.csv  mapping_raw.csv  total_income_2024.ipynb
policyengine_uk_data/datasets/frs/local_areas/constituencies/targets/: README.md  age.csv  create_employment_incomes.py  employment_income.csv  fill_missing_age_demographics.py  nomis_earning_jobs_data.xlsx  total_income.csv
policyengine_uk_data/datasets/frs/local_areas/local_authorities/: calibrate.py  loss.py
policyengine_uk_data/datasets/frs/local_areas/local_authorities/targets/: README.md  age.csv  create_employment_incomes.py  employment_income.csv  fill_missing_age_demographics.py  total_income.csv
policyengine_uk_data/storage/: demographics.csv  download_private_prerequisites.py  incomes.csv  incomes_projection.csv  statistics_by_year.csv  tax_benefit.csv  upload_completed_datasets.py  upload_private_prerequisites.py  uprating_factors.csv  uprating_growth_factors.csv
policyengine_uk_data/tests/: test_import.py
policyengine_uk_data/utils/: __init__.py  datasets.py  download_docs_prerequisites.py  github.py  huggingface.py  incomes_projection.py  loss.py  qrf.py  reweight.py  spi.py  uprating.py
policyengine_uk_data/utils/imputations/: __init__.py  capital_gains.py  consumption.py  income.py  vat.py  wealth.py
